# twinmind

./: .gitignore  CLAUDE.md  JOURNEY.md  README.md
client/: package-lock.json  package.json  vitest.config.ts
client/app/: globals.css  layout.tsx  page.module.css  page.tsx
client/components/BatchDivider/: BatchDivider.module.css  BatchDivider.tsx
client/components/ChatMessage/: ChatMessage.module.css  ChatMessage.tsx
client/components/ChatPanel/: ChatPanel.module.css  ChatPanel.tsx
client/components/EmptyState/: EmptyState.module.css  EmptyState.tsx
client/components/ExportButton/: ExportButton.module.css  ExportButton.tsx
client/components/HelpBanner/: HelpBanner.tsx  (+1 more)
client/hooks/: useAutoScroll.ts  useChatStream.ts  useMediaRecorder.ts  useSuggestionsPolling.ts
client/lib/: api.ts  defaults.ts  export.ts  groq.ts  ids.ts  prompts.ts  sessionStore.tsx  sse.ts  suggestions.ts  transcribeFilter.ts
client/test/: panels.test.tsx  reducer.test.ts  sse.test.ts  suggestions.test.ts  transcribeFilter.test.ts
client/types/: api.ts  session.ts
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
server/app/: __init__.py  config.py  db.py  deps.py  groq_client.py  main.py  models.py  prompts.py  session.py  sse.py
server/app/routers/: __init__.py  chat.py  export.py  suggestions.py  transcribe.py
server/app/sql/: schema.sql
server/scripts/: apply_schema.py
server/tests/: conftest.py  test_auth.py  test_chat.py  test_export.py  test_export_unknown_session.py  test_healthz.py  test_suggestions.py  test_transcribe.py
(+12 files in other folders)
